[package]
name = "hello-revm"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.88"
revm = { version = "14.0.2", features = [] }
alloy-sol-types = "0.8.3"
alloy-sol-macro = "0.8.3"
alloy = { version = "0.3.6", features = ["rpc", "rpc-types"] }
bytes = "1.7.1"
revm-primitives = { version = "9.0.2", features = ["serde", "std"] }
serde = { version = "1.0.210", features = ["derive"] }
postcard = { version = "1.0.10", features = ["alloc"] }
